appId: com.chenyy.workouttracker
---
- launchApp:
    clearState: true
- assertVisible: "欢迎回来"
- assertVisible: "邮箱 / 学号"
- assertVisible: "密码"
- assertVisible: "立即注册"
- assertVisible: "显示语言: zh-CN"
- tapOn: "显示语言: zh-CN"
- assertVisible: "Welcome back"
- assertVisible: "Display language: en"
- tapOn: "Display language: en"
- assertVisible: "欢迎回来"
- assertVisible: "显示语言: zh-CN"
- tapOn: "立即注册"
- assertVisible: "创建账号"
- assertVisible: "姓名"
- assertVisible: "学号"
- assertVisible: "邮箱 / 学号"
- assertVisible: "密码"
- tapOn: "登录"
- assertVisible: "欢迎回来"
